--- a/CuritibaPlaces/CuritibaPlaces.View/CuritibaPlaces.View.csproj
+++ b/CuritibaPlaces/CuritibaPlaces.View/CuritibaPlaces.View.csproj
@@ -64,6 +64,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Home.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -71,6 +75,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Home.xaml.cs">
+      <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -104,6 +111,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CuritibaPlaces.Controllers\CuritibaPlaces.Controllers.csproj">
+      <Project>{3bfacdfb-6e41-4470-b7f3-511767bd826c}</Project>
+      <Name>CuritibaPlaces.Controllers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CuritibaPlaces.Model\CuritibaPlaces.Model.csproj">
+      <Project>{e80fec44-746c-4bca-befd-a2cbba12e9d1}</Project>
+      <Name>CuritibaPlaces.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
