implementando em c# as views

--- a/CuritibaPlaces/CuritibaPlaces.View/CuritibaPlaces.View.csproj
+++ b/CuritibaPlaces/CuritibaPlaces.View/CuritibaPlaces.View.csproj
@@ -64,20 +64,30 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="EnderecosCadastrados.xaml.cs">
-      <DependentUpon>EnderecosCadastrados.xaml</DependentUpon>
+    <Compile Include="CadastrarEndereco.xaml.cs">
+      <DependentUpon>CadastrarEndereco.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Home.xaml.cs">
-      <DependentUpon>Home.xaml</DependentUpon>
+    <Compile Include="EnderecoCadastrados.xaml.cs">
+      <DependentUpon>EnderecoCadastrados.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="home.xaml.cs">
+      <DependentUpon>home.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PesquisaLugares.xaml.cs">
+      <DependentUpon>PesquisaLugares.xaml</DependentUpon>
     </Compile>
     <Compile Include="Register.xaml.cs">
       <DependentUpon>Register.xaml</DependentUpon>
     </Compile>
-    <Page Include="EnderecosCadastrados.xaml">
+    <Page Include="CadastrarEndereco.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Home.xaml">
+    <Page Include="EnderecoCadastrados.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="home.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -93,6 +103,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PesquisaLugares.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Register.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
